--- a/monster-slayer/index.html
+++ b/monster-slayer/index.html
@@ -29,17 +29,40 @@
           <div class="healthbar__value" :style="playerBarStyles"></div>
         </div>
       </section>
-      <section id="controls">
+      <section class="container" v-if="winner">
+        <h2>Game Over!</h2>
+        <h3 v-if="winner === 'monster'">You lost!</h3>
+        <h3 v-if="winner === 'player'">You Won!</h3>
+        <h3 v-if="winner === 'draw'">It's a draw!</h3>
+        <button @click="startGame">Play Again</button>
+      </section>
+      <section id="controls" v-else>
         <button @click="attackMonster">ATTACK</button>
         <button :disabled="canUseSpecialAttack" @click="specialAttack">
           SPECIAL ATTACK
         </button>
         <button @click="healPlayer">HEAL</button>
-        <button>SURRENDER</button>
+        <button @click="surrender">SURRENDER</button>
       </section>
       <section id="log" class="container">
         <h2>Battle Log</h2>
-        <ul></ul>
+        <ul>
+          <li v-for="log in logMessages">
+            <span
+              :class="{'log--player': log.actionBy === 'player', 'log--monster': log.actionBy === 'monster'}"
+            >
+              {{log.actionBy === 'player' ? 'Player' : 'Monster'}}
+            </span>
+            <span v-if="log.actionType === 'heal'">
+              heals himself for
+              <span class="log--heal">{{log.actionValue}}</span>
+            </span>
+            <span v-else>
+              attack and deals
+              <span class="log--damage">{{log.actionValue}}</span>
+            </span>
+          </li>
+        </ul>
       </section>
     </div>
   </body>
